[NAE-2072] Workspaces - implement workspace sandboxing of petri net resource - add todos